--- a/requirements.txt
+++ b/requirements.txt
@@ -7,13 +7,13 @@ pydantic-settings>=2.1,<3.0
 aiohttp>=3.9,<4.0
 ollama-python==0.1.2
 
-# ---------- Speech-to-Text (HIZ ODAKLI) ----------
+# ---------- Speech-to-Text ----------
 faster-whisper[ctranslate2]>=1.0.7,<2.0
 
-# ---------- Text-to-Speech (YENİ, UYUMLU VE HIZLI) ----------
+# ---------- Text-to-Speech ----------
 pyttsx3==2.90
 pyobjc>=11.0 
-# ---------- Translation (LOKAL) ----------
+# ---------- Translation  ----------
 argostranslate>=1.9.0,<2.0
 
 # ---------- Audio / VAD ----------
